force-app/main/default/objects/LLC_BI__Transaction_Request__c/LLC_BI__Transaction_Request__c.object-meta.xml
<CustomObject>
    <description>An object to store transaction requests.</description>
    <label>Transaction Request</label>
    <nameField>
        <displayFormat>TXNR-{000000000}</displayFormat>
        <label>Transaction Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>