force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__CESA_Earnings_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CESA_Earnings_Amount__c</fullName>
    <description>This field is optional. It is the portion of the CESA transfer that is considered the earnings amount.</description>
    <inlineHelpText>The portion of the (CESA) transfer that is considered the earnings amount.</inlineHelpText>
    <label>CESA Earnings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>