force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Contribution_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contribution_Tax_Year__c</fullName>
    <description>This field is optional. It is the tax year of the IRA/HSA contribution.</description>
    <inlineHelpText>The tax year of the IRA/HSA contribution.</inlineHelpText>
    <label>Contribution Tax Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>