force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that describes the IRA Contribution Type.</description>
    <inlineHelpText>The IRA Contribution Type</inlineHelpText>
    <label>Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular (including Catch-Up)</fullName>
            </value>
            <value>
                <fullName>Rollover from an HSA</fullName>
            </value>
            <value>
                <fullName>Transfer from an HSA</fullName>
            </value>
            <value>
                <fullName>Return of Mistaken Distribution</fullName>
            </value>
            <value>
                <fullName>Rollover from an Archer Medical Savings Account</fullName>
            </value>
            <value>
                <fullName>Transfer from an Archer Medical Savings Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>