force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Delivery_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Delivery_Payment_Description__c</fullName>
    <description>This field is optional. It is the a description of how the individual should be referenced on the check or certificate registration.</description>
    <inlineHelpText>This is a description of how the individual should be referenced on the check or certificate registration.</inlineHelpText>
    <label>Delivery Payment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>