force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Deposit_Basis_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Basis_Amount__c</fullName>
    <description>This field is optional. It is the deposit basis amount of the CESA contribution. The basis amount equals the amount of the rollover or transfer contribution.</description>
    <inlineHelpText>The deposit basis amount of the (CESA) contribution. The basis amount equals the amount of the rollover or transfer contribution.</inlineHelpText>
    <label>Deposit Basis Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>