force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Disbursement_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Disbursement_Description__c</fullName>
    <description>Users manually populate this optional text field to indicate disbursement transaction details. By default, this field is blank.</description>
    <inlineHelpText>Enter a description for the disbursement.</inlineHelpText>
    <label>Disbursement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>