force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Distribution_Administration_Fee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Administration_Fee__c</fullName>
    <description>This field is optional. It is the amount of the administrative fees charged in connection with the distribution.</description>
    <inlineHelpText>The amount of the administrative fees charged in connection with the distribution.</inlineHelpText>
    <label>Distribution Administration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>