force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Election_Of_Payment_Default_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Election_Of_Payment_Default_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, the election of payment type selected is the default election that was made after the election deadline has passed.</description>
    <inlineHelpText>If true the election of payment type selected is the default election that was made after the election deadline has passed.</inlineHelpText>
    <label>Election of Payment Default Indicator</label>
    <type>Checkbox</type>
</CustomField>