force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Excess_Attributable_Earnings__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Excess_Attributable_Earnings__c</fullName>
    <description>This field is optional. It is the amount of the earnings attributable to excess contribution. This only applies to distributions related to excess or recharacterized contributions.</description>
    <inlineHelpText>The amount of the earnings attributable to excess contribution. This only applies to distributions related to excess or recharacterized contributions.</inlineHelpText>
    <label>Excess Attributable Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>