force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Excess_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Excess_Contribution_Amount__c</fullName>
    <description>This field is optional. It is the amount of excess contribution related to the distribution.</description>
    <inlineHelpText>The amount of excess contribution related to the distribution.</inlineHelpText>
    <label>Excess Contribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>