force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Excess_Contribution_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Excess_Contribution_Tax_Year__c</fullName>
    <description>This field is optional. It is the tax year for which the excess contribution was made. This only applies to distributions related to excess or recharacterized contributions.</description>
    <inlineHelpText>The tax year for which the excess contribution was made. This only applies to distributions related to excess or recharacterized contributions.</inlineHelpText>
    <label>Excess Contribution Tax Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>