force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__HSA_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HSA_Distribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of distribution for a Health Savings Account (HSA).</description>
    <inlineHelpText>Specifies the type of distribution for a Health Savings Account (HSA).</inlineHelpText>
    <label>HSA Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Death - Estate Beneficiary - Distribution is in Year of Death</fullName>
            </value>
            <value>
                <fullName>Death - Estate Beneficiary - Distribution is After Year of Death</fullName>
            </value>
            <value>
                <fullName>Death - Other Beneficiary - Distribution is in Year of Death</fullName>
            </value>
            <value>
                <fullName>Death - Other Beneficiary - Distribution is After Year of Death</fullName>
            </value>
            <value>
                <fullName>Transfer to my HSA</fullName>
            </value>
            <value>
                <fullName>Transfer to spouse&apos;s HSA due to death</fullName>
            </value>
            <value>
                <fullName>Transfer to former spouse&apos;s HSA due to divorce or legal separation</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Prohibited Transaction</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution by my tax-filing due date</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution - after my tax-filing due date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>