force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Investment_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Investment_Request_Date__c</fullName>
    <description>This field is optional. It is the date that the specified investment is requested to be sent and/or liquified.</description>
    <inlineHelpText>The date that the specified investment is requested to be sent and/or liquefied.</inlineHelpText>
    <label>Investment Request Date</label>
    <type>Date</type>
</CustomField>