force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_Addtl_Federal_Withholdings_Amt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Addtl_Federal_Withholdings_Amt__c</fullName>
    <description>This field is optional. It is the additional dollar amount (over and above the 10% federal income tax withholding) that the IRA owner will have withheld from each distribution.</description>
    <inlineHelpText>The additional dollar amount (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</inlineHelpText>
    <label>IRA Additional Federal Withholdings Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>