force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Distribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of distribution for a Traditional Beneficiary or Roth Beneficiary IRA.</description>
    <inlineHelpText>Specifies the type of distribution for a Traditional Beneficiary or Roth Beneficiary IRA.</inlineHelpText>
    <label>IRA Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>IRS Levy</fullName>
            </value>
            <value>
                <fullName>Revocation</fullName>
            </value>
            <value>
                <fullName>Prohibited Transaction</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution - On or before my tax-filing due date in the same year as excess contribution</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution - On or before my tax-filing due date in the year after excess contribution</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution - After my tax-filing due date</fullName>
            </value>
            <value>
                <fullName>Recharacterization (Roth Beneficiary only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>