force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_State_Withholdings_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_State_Withholdings_Amount__c</fullName>
    <description>This field is optional. It is the dollar amount which the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</description>
    <inlineHelpText>The dollar amount which the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</inlineHelpText>
    <label>IRA State Withholdings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>