force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_Transfer_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Transfer_Source__c</fullName>
    <description>Users populate this optional picklist field with the source of the funds for transfer.</description>
    <inlineHelpText>Specifies the source of funds for a transfer to a Traditional or SIMPLE IRA.</inlineHelpText>
    <label>IRA Transfer Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>