force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Is_Submitted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Submitted__c</fullName>
    <description>--DEPRECATED-- Determines if the transaction request status is submitted.</description>
    <formula>ISPICKVAL(LLC_BI__Status__c, &quot;Submitted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-D Is Submitted</label>
    <type>Checkbox</type>
</CustomField>