force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Local_Income_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Local_Income_Tax_Percent__c</fullName>
    <description>This field is optional. It specifies any additional percentage amount (not flat dollar amount) of local income taxes to be withheld from the distribution subtotal. Local taxes do not always apply but, where applicable, only one of the two data points for either the amount (entered under Txn/Deposit/IRAPlans/IRAPlan/LocalIncomeTaxAmount) or the percentage needs to be passed.</description>
    <inlineHelpText>Any additional percentage amount of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
    <label>Local Income Tax Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>