force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Local_Income_Taxes_Locality__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Local_Income_Taxes_Locality__c</fullName>
    <description>This field is optional. Specifies the locality (for example, city) applicable to any additional dollar amount or percentage of local income taxes to be withheld from the distribution subtotal.</description>
    <inlineHelpText>Specifies the locality (e.g., city) applicable to any additional dollar amount or percentage of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
    <label>Local Income Taxes Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>