force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Net_Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Net_Distribution_Amount__c</fullName>
    <description>This field is optional. The externally calculated, net dollar amount of the distribution to print in the payment detail table on the distribution or election form.</description>
    <inlineHelpText>The externally calculated, net dollar amount of the distribution to print in the payment detail table on the distribution or election form.</inlineHelpText>
    <label>Net Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>