force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Non_Deposit_Investment_Shares__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Non_Deposit_Investment_Shares__c</fullName>
    <description>This field is optional. It is the number of shares of the non-deposit investment.</description>
    <inlineHelpText>The number of shares of the non-deposit investment.</inlineHelpText>
    <label>Non-Deposit Investment Shares</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>