force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Original_Distrubtion_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Original_Distrubtion_Description__c</fullName>
    <description>This field is optional. For a contribution that is a return of a mistaken distribution(s), this is a description of the date(s) of the original distribution(s).</description>
    <inlineHelpText>For a contribution that is a return of a mistaken distribution(s) this is a description of the date(s) of the original distribution(s).</inlineHelpText>
    <label>Original Distrubtion Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>