force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Other_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Delivery_Instructions__c</fullName>
    <description>This field is optional. It is the description of any other delivery instructions regarding the payment.</description>
    <inlineHelpText>A description of any other delivery instructions regarding the payment.</inlineHelpText>
    <label>Other Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>