force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Other_Delivery_Payment_Options__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Delivery_Payment_Options__c</fullName>
    <description>This field is optional. It is a user-defined description of possible medium(s) for the payment/transfer requested (for example, check or ACH transfer).</description>
    <inlineHelpText>User-defined description of possible medium(s) for the payment/transfer requested. (e.g., &apos;check or ACH transfer.&apos;)</inlineHelpText>
    <label>Other Delivery Payment Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>