force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Other_Distribution_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Distribution_Payment_Method__c</fullName>
    <description>This field is optional. It is a description of the other payment method type.</description>
    <inlineHelpText>A description of the other payment method type.</inlineHelpText>
    <label>Other Distribution Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>