force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Payee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payee__c</fullName>
    <description>Users manually populate this optional text field to indicate the name of the disbursement recipient. By default, this field is blank.</description>
    <inlineHelpText>Enter the name of the disbursement recipient.</inlineHelpText>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>